--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-datepicker": "^6.9.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "parcel": "^2.12.0",
