--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.2.5",
+    "autoprefixer": "^10.4.19",
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
-    "react-select": "^5.8.0"
+    "react-redux": "^9.1.2",
+    "react-select": "^5.8.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "parcel": "^2.12.0",
