--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "trips-dashboard",
   "version": "1.0.0",
   "description": "",
+  "source": "index.html",
+
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "parcel --port 3000",
+    "build": "parcel build"
   },
   "keywords": [],
   "author": "",
