Implemented: logic to calculate TAT status, and added support to update status from add trip modal

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "source": "index.html",
-
   "scripts": {
     "start": "parcel --port 3000",
     "build": "parcel build"
@@ -17,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.19",
+    "luxon": "^3.4.4",
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
