--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.19",
     "luxon": "^3.4.4",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
