--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
